# gitlab_template_data_science

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.gitlab/issue_templates/: feature.md
.gitlab/merge_request_templates/: merge_request.md
notebooks/: sample.ipynb
src/: sample.py
test/unit/: test_sample.py
