[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["yoshihisa_furusawa"]


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.precommit.dependencies]
pre-commit = "^2.20.0"
nbqa = "^1.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"

[tool.isort]
profile = "black"
known_local_folder = ["src"]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 88

[tool.poetry.dependencies]
python = "3.9.16"
numpy = "^1.24.3"
pandas = "^2.0.1"
Pillow = "^9.5.0"
ipython = "^8.13.1"
ipykernel = "^6.22.0"
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
mypy = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.mypy.overrides]]
module = [
    "matplotlib",
    "pandas",
    "yaml",
    "matplotlib.pylab",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
]
follow_imports = "skip"
